--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@
             <p id="ultimop">Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
         </article>
     </main>
-    <footer>Copyright (c) 2023 Pedro Claro</footer>
+    <footer><a href="pag02.html">Copyright (c) 2023 Pedro Claro</a></footer>
 </body>
 </html>
