--- a/pag02.html
+++ b/pag02.html
@@ -12,6 +12,7 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: 1em;
             line-height: 1.5em;
+            text-align: justify;
         }
 
         header {
