--- a/pag02.html
+++ b/pag02.html
@@ -11,12 +11,12 @@
         * {
             font-family: Arial, Helvetica, sans-serif;
             font-size: 1em;
-            line-height: 1.5em;
+            line-height: 1.7em;
             text-align: justify;
         }
 
         header {
-            font-size: 2em;
+            font-size: 1.5em;
             text-align: center;
             padding: 15px;
         }
@@ -25,6 +25,7 @@
             min-width: 300px;
             max-width: 900px;
             margin: auto;
+            padding: 15px;
         }
 
     </style>
