--- a/pag02.html
+++ b/pag02.html
@@ -16,7 +16,7 @@
         }
 
         header {
-            font-size: 1.5em;
+            font-size: 1.3em;
             text-align: center;
             padding: 15px;
         }
@@ -26,6 +26,10 @@
             max-width: 900px;
             margin: auto;
             padding: 15px;
+        }
+
+        main p {
+            padding: 5px;
         }
 
     </style>
