--- a/pag02.html
+++ b/pag02.html
@@ -21,6 +21,10 @@
             padding: 15px;
         }
 
+        header h1 {
+            text-align: center;
+        }
+
         main {
             min-width: 300px;
             max-width: 900px;
