--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <nav>
         <a href="#">Início</a>
         <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <a href="#">Contato</a>
     </nav>
     <main>
         <article>
