--- a/pag02.html
+++ b/pag02.html
@@ -34,6 +34,7 @@
 
         main p {
             padding: 5px;
+            margin: 10px;
         }
 
     </style>
@@ -64,8 +65,6 @@
             OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
             SOFTWARE.
         </p>
-
-        <p>________________________</p>
 
         <p>Copyright (c) 2023 Pedro Claro
 
