--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 
                 <p>Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
                 
-                <p>Acesse aqui o site <a href="https://www.android.com/intl/pt-BR_br/">Android</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
+                <p>Acesse aqui o site <a href="https://www.android.com/intl/pt-BR_br/" target="_blank" rel="external">Android</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
             </aside>
 
             <p id="ultimop">Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
